#4 - Packaging is working. Need to add multiplatform build and mac signing